--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,21 @@
+@font-face {
+    font-family: Gilroy;
+    src: url(../fonts/Gilroy-Regular.woff);
+}
+@font-face {
+    font-family: Gilroybold;
+    src: url(../fonts/Gilroy-Heavy.woff);
+}
 .greenbg{
     background-color: #75BF7A;
     ;
 }
 .graybg{
     background-color: #F9F9F9;
+}
+.Gilroy{
+    font-family: Gilroy;
+}
+.Gilroybold{
+    font-family: Gilroybold;
 }
